--- a/horario_site/style.css
+++ b/horario_site/style.css
@@ -23,6 +23,7 @@ div#msg{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
+    padding-bottom: 10px;
 }
 img#imagem{
     width: 450px;
